homepage link to search page

--- a/templates/ede/index.html
+++ b/templates/ede/index.html
@@ -7,8 +7,8 @@
 </head>
 <body>
   <h1>Elm Django Example</h1>
-  <div id="elm"></div>
-  <script src="{% static 'ede/elm.js' %}"></script>
-  <script type="text/javascript">Elm.Ede.embed(document.querySelector("#elm"));</script>
+  <p>
+    <a href="{% url 'search_tweets' %}">Search tweets</a>
+  </p>
 </body>
 </html>
