--- a/templates/ede/search.html
+++ b/templates/ede/search.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Elm Django Example</title>
+  <title>Elm Django Example - Search</title>
 </head>
 <body>
   <h1>Elm Django Example - Search</h1>
