--- a/templates/ede/search.html
+++ b/templates/ede/search.html
@@ -9,6 +9,6 @@
   <h1>Elm Django Example - Search</h1>
   <div id="elm-search"></div>
   <script src="{% static 'ede/elm.js' %}"></script>
-  <script type="text/javascript">Elm.Ede.embed(document.querySelector("#elm-search"));</script>
+  <script type="text/javascript">Elm.Search.embed(document.querySelector("#elm-search"));</script>
 </body>
 </html>
